--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: image-to-pdf
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn --timeout 300 --workers 2 app:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
